<resources>
    <string name="app_name">Socially</string>
    <string name="search_hint">Search Pages, Events, Groups&#8230;</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="loading">Loading&#8230;</string>
    <string name="add_your_message">Add your message</string>
    <string name="send">send</string>
    <string name="is_online">is online</string>
    <string name="connect_to_fb_chat">Connect to FB Chat</string>
    <string name="type_friends_name">Type friend\'s name</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="start">Start:</string>
    <string name="end">End</string>
    <string name="rsvp_status">RSVP</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="loading_comments">Loading comments&#8230;</string>
    <string name="earlier_comments">Earlier comments&#8230;</string>
    <string name="long_click_to_mark_as_read">Long click to mark as read</string>
    <string name="post">Post</string>
    <string name="type_your_message">Type your message</string>
    <string name="write_your_message">write your message</string>
    <string name="zero">0</string>
    <string name="choose_content_type">Choose content type</string>
    <string name="start_search">Start search</string>
    <string name="respond">Respond</string>
    <string name="search_options_prompt">Specify search</string>
    <string-array name="search_options_array">
        <item>User</item>
        <item>Page</item>
        <item>Event</item>
        <item>Group</item>
    </string-array>
    <string-array name="privacy_for_post_array">
        <item>Everyone</item>
        <item>Friends of friends</item>
        <item>Friends</item>
        <item>Myself</item>
    </string-array>
    <string name="privacy_spinner_prompt">privacy</string>
    <string name="set_color_as_background">Set color as background</string>
    <string name="join">Join</string>
    <string name="maybe">Maybe</string>
    <string name="decline">Decline</string>
    <string name="number_of_likes"># likes</string>
    <string name="number_talking_about_this"># talking about this</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="notification">Notification</string>
    <string name="close">Close</string>
    <string name="next">Next</string>
    <string name="view">View</string>
    <string name="message">Message</string>
    <string name="privacy">Privacy</string>
    <string name="link">Link</string>
    <string name="url">URL</string>
    <string name="name">Name</string>
    <string name="free">Free</string>
    <string name="to_this_app">to this app</string>
    <string name="as_device_wallpaper">as device wallpaper</string>
    <string name="caption">Caption</string>
    <string name="album">Album</string>
    <string name="album_lowercase">album</string>
    <string name="albums">Albums</string>
    <string name="albums_lowercase">albums</string>
    <string name="note_that_if_you_dont_use_mobile_uploads_album">Note that if you don\'t use Mobile Uploads album, you may have to approve the upload on the Facebook website before the photo is visible in the album</string>
    <string name="checked_in_at">checked in at</string>
    <string name="albums_could_not_be_retrieved">Albums could not be retrieved</string>
    <string name="no_albums_available">No albums available</string>
    <string name="photo_lowercase">photo</string>
    <string name="photos_lowercase">photos</string>
    <string name="last_updated">Last updated</string>
    <string name="refresh">Refresh</string>
    <string name="checkin">Checkin</string>
    <string name="upload_from_gallery">Upload from Gallery</string>
    <string name="pick_gallery">Pick Gallery</string>
    <string name="text_style">Text style</string>
    <string name="post_status_update_or_link">Post Status Update or Link</string>
    <string name="snapshot_and_upload">Snapshot + upload</string>
    <string name="save_to_sd_card">Save to SD card</string>
    <string name="logout">Logout</string>
    <string name="do_you_want_to_logout">Do you want to logout from Socially. Next time you use Socially, you\'ll have to enter username and password.</string>
    <string name="quit_app">Quit App</string>
    <string name="do_you_want_to_exit_socially">Do you want to exit Socially?</string>
    <string name="exit">Exit</string>
    <string name="stay">Stay</string>
    <string name="profile">Profile</string>
    <string name="wall">Wall</string>
    <string name="photos">Photos</string>
    <string name="about">About</string>
    <string name="license">License</string>
    <string name="friends_recent">Friends\'s recent</string>
    <string name="nearby">Nearby</string>
    <string name="info">Info</string>
    <string name="members">Members</string>
    <string name="map">Map</string>
    <string name="notifications">Notifications</string>
    <string name="your_profile">Your Profile</string>
    <string name="place_profile">Place Profile</string>
    <string name="events">Events</string>
    <string name="attending">Attending</string>
    <string name="invitations">Invitations</string>
    <string name="event_info">Event Info</string>
    <string name="invited">Invited</string>
    <string name="declined">Declined</string>
    <string name="error_retrieving_message_history">Error retrieving message history</string>
    <string name="message_history_could_not_be_retrieved">Message history could not be retrieved</string>
    <string name="enter_a_message">Enter a message</string>
    <string name="message_could_not_be_delivered">Message could not be delivered</string>
    <string name="connecting_to_chat">Connecting to chat</string>
    <string name="could_not_connect_to_chat">Could not connect to chat</string>
    <string name="connected_to_chat">Connected to chat</string>
    <string name="could_not_retrieve_friend_list">Could not retrieve friend list</string>
    <string name="chat_connection_closed">Chat connection closed</string>
    <string name="chat_connection_error">Chat connection error</string>
    <string name="reconnecting_to_chat">Reconnecting to chat</string>
    <string name="chat_reconnection_failed">Chat reconnection failed</string>
    <string name="fetching_locations">Fetching locations</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="checkins_could_not_be_retrieved">Checkins could not be retrieved</string>
    <string name="no_checkins_available">No checkins available</string>
    <string name="checkins">Checkins</string>
    <string name="nearby_locations">Nearby Locations</string>
    <string name="locations_could_not_be_fetched">Locations could not be fetched</string>
    <string name="retrieving_map">Retrieving map</string>
    <string name="location_coordinates_not_available">Location coordinates not available</string>
    <string name="everyone">Everyone</string>
    <string name="friends_of_friends">Friends of friends</string>
    <string name="myself">Myself</string>
    <string name="youll_receive_a_notification_when_your_checkin_has_been_posted">You\'ll receive a notification when your checkin has been posted</string>
    <string name="returning_to_previous_screen">Returning to previous screen</string>
    <string name="birthday_list_could_not_be_refreshed">Birthday list could not be refreshed</string>
    <string name="birthdays">Birthdays</string>
    <string name="no_birthdays_data_available">No birthdays data available</string>
    <string name="not_available">Not available</string>
    <string name="event_details">Event Details</string>
    <string name="response_couldnt_be_sent">Response couldn\'t be sent</string>
    <string name="youve_joined_this_event">You\'ve joined this event</string>
    <string name="maybe_youll_join">Maybe you\'ll join</string>
    <string name="youve_declined_this_event">You\'ve declined this event</string>
    <string name="latest_events_could_not_be_fetched">Latest events could not be fetched</string>
    <string name="searching">Searching&#8230;</string>
    <string name="no_search_results_found">No search results found</string>
    <string name="search_results_could_not_be_fetched">Search results could not be fetched</string>
    <string name="event_lowercase">event</string>
    <string name="events_lowercase">events</string>
    <string name="this_list_is_empty">This list is empty</string>
    <string name="no_new_invitations">No new invitations</string>
    <string name="invitation_lowercase">invitation</string>
    <string name="invitations_lowercase">invitations</string>
    <string name="tap_to_respond">Tap to respond</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="friend_requests_data_could_not_be_retrieved">Friend requests data could not be retrieved</string>
    <string name="request_lowercase">request</string>
    <string name="requests_lowercase">requests</string>
    <string name="no_pending_friends_requests">No pending friends requests</string>
    <string name="friends_list_could_not_be_retrieved">Friends list could not be retrieved</string>
    <string name="friends">Friends</string>
    <string name="search">Search</string>
    <string name="no_friends_data_available">No friends data available</string>
    <string name="friends_lowercase">friends</string>
    <string name="data_not_available">Data not available</string>
    <string name="groups">Groups</string>
    <string name="group_lowercase">group</string>
    <string name="groups_lowercase">groups</string>
    <string name="page_lowercase">page</string>
    <string name="pages_lowercase">pages</string>
    <string name="liked_pasttense_lowercase">liked</string>
    <string name="themes_menu_item">Themes</string>
    <string name="color_picker_menu_item">Color Picker</string>
    <string name="newsfeed_menu_item">Newsfeed</string>
    <string name="friends_menu_item">Friends</string>
    <string name="photos_albums_menu_item">Photos</string>
    <string name="notifications_menu_item">Notifications</string>
    <string name="messages_menu_item">Messages</string>
    <string name="checkins_menu_item">Checkins</string>
    <string name="friends_recent_menu_item">Friends\'s recent</string>
    <string name="nearby_locations_menu_item">Nearby Locations</string>
    <string name="events_menu_item">Events</string>
    <string name="attending_menu_item">Attending</string>
    <string name="invitations_menu_item">Invitations</string>
    <string name="birthdays_menu_item">Birthdays</string>
    <string name="groups_menu_item">Groups</string>
    <string name="chat_menu_item">Chat</string>
    <string name="profile_menu_item">Profile</string>
    <string name="me_menu_item">Me</string>
    <string name="my_wall_menu_item">My wall</string>
    <string name="my_photos_menu_item">My photos</string>
    <string name="likes_menu_item">Likes</string>
    <string name="subscriptions_menu_item">Subscriptions</string>
    <string name="friend_requests_menu_item">Friend requests</string>
    <string name="settings_menu_item">Settings</string>
    <string name="about_menu_item">About</string>
    <string name="logout_menu_item">Logout</string>
    <string name="remove_ads_menu_item">Remove ads</string>
    <string name="new_messages_could_not_be_retrieved">New messages could not be retrieved</string>
    <string name="no_messages_available">No messages available</string>
    <string name="data_could_not_be_retrieved">Data could not be retrieved</string>
    <string name="no_newsfeed_posts_available">No newsfeed posts available</string>
    <string name="older_posts_could_not_be_retrieved">Older posts could not be retrieved</string>
    <string name="like_on_button">Like</string>
</resources>