<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/refreshMenuItem"
        android:icon="@drawable/icon_refresh"
        android:showAsAction="always"
        android:title="@string/refresh">
    </item>
    <item
        android:id="@+id/postMenuItem"
        android:icon="@drawable/actionbar_icon_megaphone"
        android:showAsAction="always"
        android:title="@string/post">
        <menu>
            <item
                android:id="@+id/postStatusMenuItem"
                android:icon="@drawable/actionbar_icon_status_update"
                android:title="@string/post_status_update_or_link"/>
            <item
                android:id="@+id/postCheckinMenuItem"
                android:icon="@drawable/sliding_menu_icon_checkins"
                android:title="@string/checkin"/>
            <item
                android:id="@+id/CameraMenuItem"
                android:icon="@drawable/actionbar_icon_camera"
                android:title="@string/snapshot_and_upload"/>
            <item
                android:id="@+id/GalleryMenuItem"
                android:icon="@drawable/sliding_menu_icon_albums"
                android:title="@string/upload_from_gallery"/>
        </menu>
    </item>
    <item
        android:id="@+id/textStyleMenuItem"
        android:icon="@drawable/actionbar_icon_text_style"
        android:showAsAction="always"
        android:title="@string/text_style">
    </item>

</menu>