<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="10dip" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#333333"
        android:orientation="vertical"
        android:padding="10dip" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:maxLines="2"
            android:text="@string/choose_content_type"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/searchOptionsSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/search_options_array"
            android:prompt="@string/search_options_prompt" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_search" />
    </LinearLayout>

</LinearLayout>