<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/contentRoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:background="@drawable/square_white_four_borders"
            android:padding="10dip" >

            <RelativeLayout
                android:id="@+id/profilePhotoFrame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/square_white"
                android:padding="10dip" >

                <com.bluebitapps.utils.AspectRatioImageView
                    android:id="@+id/profilePhoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <TextView
                android:id="@+id/nameValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profilePhotoFrame"
                android:padding="20dip"
                android:singleLine="false" />

            <TextView
                android:id="@+id/descriptionValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameValue"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:singleLine="false" />

            <TableLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/descriptionValue"
                android:orientation="vertical"
                android:padding="20dip" >

                <TableRow
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/cityLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dip"
                        android:singleLine="false"
                        android:text="@string/city" />

                    <TextView
                        android:id="@+id/cityValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="false" />
                </TableRow>

                <TableRow
                    android:id="@+id/country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/countryLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dip"
                        android:singleLine="false"
                        android:text="@string/country" />

                    <TextView
                        android:id="@+id/countryValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="false" />
                </TableRow>

                <TableRow
                    android:id="@+id/likesCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/likesCountLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dip"
                        android:singleLine="false"
                        android:text="@string/number_of_likes" />

                    <TextView
                        android:id="@+id/likesCountValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="false" />
                </TableRow>

                <TableRow
                    android:id="@+id/talkingAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/talkingAboutLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dip"
                        android:singleLine="false"
                        android:text="@string/number_talking_about_this" />

                    <TextView
                        android:id="@+id/talkingAboutValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="false" />
                </TableRow>
            </TableLayout>

           
        </RelativeLayout>

         <TextView
                android:layout_width="match_parent"
                android:layout_height="6dip" 
                android:layout_below="@id/contentRoot"/>
        
      <com.bluebitapps.fbclientbase.layout.LoadingView
            android:id="@+id/loadingView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</ScrollView>